# korean-glue

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.ko.md  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml  release.yml
scripts/: check.sh  run_actionlint.sh
src/korean_glue/: __init__.py  __main__.py  dictionary.py  engine.py  exceptions.py  rules.py
src/korean_glue/integrations/: __init__.py  django_tags.py  jinja_filters.py
tests/: test_cli.py  test_engine.py  test_integrations.py
