[project]
name = "korean_glue"
version = "0.1.0"
description = "A modern Python library for Korean josa processing with dictionary support and framework integrations."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "woojing", email = "woojing.seok@gmail.com" }]
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Natural Language :: Korean",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
    "pre-commit",
    "Django>=3.2",
    "Jinja2>=3.0",
    "tox",
    "tox-uv",
    "bump-my-version",
]

[project.scripts]
kglue = "korean_glue.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    "/tests",
    "/scripts",
    "/.github",
]

[tool.hatch.build.targets.wheel]
packages = ["src/korean_glue"]

[tool.bumpversion]
current_version = "0.1.0"
commit = true
tag = true
tag_name = "v{new_version}"


# Paths to update when bumping the project version
[[tool.bumpversion.files]]
path = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
