[project]
name = "korean_glue"
version = "0.1.4"
description = "A modern Python library for Korean josa processing with dictionary support and framework integrations."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "woojing", email = "woojing.seok@gmail.com" }]
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Natural Language :: Korean",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
]

[project.scripts]
kglue = "korean_glue.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    "/tests",
    "/scripts",
    "/.github",
]

[tool.hatch.build.targets.wheel]
packages = ["src/korean_glue"]

[tool.bumpversion]
current_version = "0.1.4"
commit = true
tag = true
tag_name = "v{new_version}"

# 공식 예시 기반 필드 추가
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
regex = false
allow_dirty = true
message = "Bump version: {current_version} → {new_version}"
tag_message = "Bump version: {current_version} → {new_version}"


# Paths to update when bumping the project version
[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "bump-my-version>=1.2.0",
    "django>=4.2,!=5.0.*,<5.3",
    "jinja2>=3.1,<3.2",
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.0",
    "tox>=4.27.0",
    "tox-uv>=1.26.1",
]
